--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
   "presets": [
-    ["es2015"],
-    "stage-2",
+    "latest",
     "react",
-    "react-boilerplate"
+    "stage-2"
   ],
 
   "plugins": [
