--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Neo feed",
+  "name": "neo-feed",
   "version": "0.0.1",
   "description": "ES6 React Redux",
   "main": "index.js",
@@ -23,6 +23,7 @@
     "collectCoverageFrom": [
       "app/**/*.{js,jsx,ts,tsx}"
     ],
+    "moduleDirectories": ["app", "node_modules"],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/assetsTransformer.js",
       "\\.(css|less)$": "<rootDir>/config/jest/assetsTransformer.js"
@@ -35,11 +36,23 @@
     }
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.0.0",
+    "classnames": "^2.2.5",
     "cross-env": "5.1.4",
+    "immutable": "^3.8.2",
+    "moment": "^2.21.0",
+    "prop-types": "^15.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "4.0.0",
-    "react-router-dom": "4.2.2"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -47,9 +60,8 @@
     "babel-eslint": "8.2.0",
     "babel-jest": "22.4.1",
     "babel-loader": "7.1.3",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "6.24.1",
-    "babel-preset-react-boilerplate": "1.1.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-2": "6.24.1",
     "copy-webpack-plugin": "4.3.0",
@@ -59,6 +71,7 @@
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.15.0",
     "eslint-config-airbnb": "16.1.0",
+    "eslint-import-resolver-webpack": "^0.8.4",
     "eslint-loader": "2.0.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
@@ -71,7 +84,7 @@
     "node-sass": "4.8.1",
     "open-browser-webpack-plugin": "0.0.5",
     "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.2.0",
+    "react-test-renderer": "^16.3.0",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.7",
     "style-loader": "0.20.3",
